--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "url": "git+https://github.com/pallad-ts/query.git"
   },
   "publishConfig": {
-    "cache": "~/.npm",
     "access": "public"
   },
   "author": "Łukasz Kużyński <lukasz.kuzynski@gmail.com> (http://wookieb.pl/)",
@@ -25,7 +24,7 @@
   },
   "homepage": "https://github.com/pallad-ts/query#readme",
   "devDependencies": {
-    "@pallad/scripts": "^1.2.4"
+    "@pallad/scripts": "^2.0.0-alpha.12"
   },
   "dependencies": {
     "predicates": "^2.0.3"
