--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/pallad-ts/query#readme",
   "dependencies": {
-    "@pallad/query": "^2"
+    "@pallad/query": "^2",
+    "alpha-errors": "^0.4.0"
   }
 }
