--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -32,5 +32,6 @@
     "@pallad/builder": "^1.0.1",
     "@pallad/query": "^2.0.2",
     "predicates": "^2.0.3"
-  }
+  },
+  "gitHead": "3a67b5f523077c2e980fbe84b0c1feada5e59e46"
 }
