--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@pallad/scripts": "^2",
     "conditional-type-checks": "^1.0.5",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "yup": "^0.32.11"
   }
 }
