--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pallad/query-graphql",
-  "version": "2.9.9",
+  "version": "3.0.0",
   "description": "Helper for graphql to create @pallad/query related types",
   "main": "compiled/index.js",
   "types": "compiled/index.d.ts",
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "@pallad/builder": "^1.0.1",
-    "@pallad/query": "^2.0.3",
-    "@pallad/query-builder": "*",
+    "@pallad/query": "^2.0.4",
+    "@pallad/query-builder": "^1.0.0",
     "graphql-scalars": "^1.17.0",
     "predicates": "^2.0.3"
   },
