--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pallad/query-graphql",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "description": "Helper for graphql to create @pallad/query related types",
   "main": "compiled/index.js",
   "types": "compiled/index.d.ts",
@@ -30,11 +30,11 @@
   },
   "dependencies": {
     "@pallad/builder": "^1.0.1",
-    "@pallad/query": "^2.1.0",
-    "@pallad/query-builder": "^1.1.1",
+    "@pallad/query": "^3.0.0",
+    "@pallad/query-builder": "^2.0.0",
+    "camel-case": "^4.1.2",
     "graphql-scalars": "^1.17.0",
-    "predicates": "^2.0.3",
-    "camel-case": "^4.1.2"
+    "predicates": "^2.0.3"
   },
   "gitHead": "3a67b5f523077c2e980fbe84b0c1feada5e59e46"
 }
