--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -30,8 +30,8 @@
     "@pallad/query": "^4.0.1",
     "alpha-errors": "^0.4.0",
     "alpha-validator": "^0.6.0",
+    "@sweet-monads/maybe": "^3",
     "alpha-validator-bridge-yup": "^0.4.2",
-    "monet": "^0.9.3",
     "yup": "^0.32.11"
   }
 }
