--- a/packages/descriptor/package.json
+++ b/packages/descriptor/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@pallad/query-builder",
+  "name": "@pallad/query-descriptor",
   "version": "4.0.0",
   "description": "",
-  "main": "compiled/index.js",
-  "types": "compiled/index.d.ts",
+  "main": "dist/pallad-query-descriptor.cjs.js",
+  "types": "dist/pallad-query-descriptor.cjs.d.ts",
   "scripts": {
     "test": "pallad-scripts test",
     "lint": "pallad-scripts lint",
-    "compile": "pallad-scripts compile",
-    "prepublishOnly": "npm run compile"
+    "compile": "npx preconstruct build",
+    "prepublishOnly": "npm run compile",
+    "postinstall": "preconstruct dev"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,12 @@
   "gitHead": "708edb6ed6ae7a686d45384118ae7649723a09d2",
   "dependencies": {
     "@pallad/builder": "^1.0.1",
+    "@pallad/errors": "^1.0.1",
     "@pallad/query": "^4.0.1",
+    "@pallad/violations": "^1.3.0",
+    "@pallad/violations-zod": "^1.0.0",
+    "@sweet-monads/either": "^3.3.1",
     "@sweet-monads/maybe": "^3",
-    "alpha-errors": "^0.4.0",
-    "alpha-validator": "^0.7.0",
-    "alpha-validator-bridge-yup": "^0.5.1",
-    "yup": "^0.32.11"
+    "zod": "^3.22.4"
   }
 }
