--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -2,13 +2,14 @@
   "name": "@pallad/query-engine",
   "version": "6.0.0",
   "description": "Simple query engine to handle @pallad/query results",
-  "main": "compiled/index.js",
-  "types": "compiled/index.d.ts",
+  "main": "dist/pallad-query-engine.cjs.js",
+  "types": "dist/pallad-query-engine.cjs.d.ts",
   "scripts": {
     "test": "pallad-scripts test",
     "lint": "pallad-scripts lint",
-    "compile": "pallad-scripts compile",
-    "prepack": "npm run compile"
+    "compile": "npx preconstruct build",
+    "prepack": "npm run compile",
+    "postinstall": "preconstruct dev"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,8 @@
   },
   "homepage": "https://github.com/pallad-ts/query#readme",
   "dependencies": {
-    "@pallad/query": "^4.0.1",
-    "alpha-errors": "^0.4.0"
+    "@pallad/errors": "^1.0.1",
+    "@pallad/query": "^4.0.1"
   },
   "gitHead": "708edb6ed6ae7a686d45384118ae7649723a09d2"
 }
