Export only necessary files

--- a/packages/descriptor/package.json
+++ b/packages/descriptor/package.json
@@ -19,6 +19,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist"
+  ],
   "author": "Łukasz Kużyński <lukasz.kuzynski@gmail.com> (http://wookieb.pl/)",
   "license": "MIT",
   "bugs": {
