--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -8,7 +8,7 @@
     "lint": "pallad-scripts lint",
     "compile": "npx preconstruct build",
     "prepublishOnly": "npm run compile",
-    "postinstall": "preconstruct dev"
+    "setup-dev": "preconstruct dev"
   },
   "repository": {
     "type": "git",
